src/main/metadata/objects/Lead_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Details</relationshipLabel>
        <relationshipName>Lead_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Item__c</fullName>
        <label>Lead Product Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Lead Details</relationshipLabel>
        <relationshipName>Lead_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'NZ') ,'NZ', 
IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP','NA'))))</defaultValue>
        <label>MD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Offer__c</fullName>
        <label>Product Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Service plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Sales offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedez Bench Finance &amp; Insurance offer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Information__c</fullName>
        <label>Quote Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Live</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Detail</label>
    <nameField>
        <label>Lead Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>